# media-cleaner-pro

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  architecture-evaluation.txt  build.rs  docker-compose.yml
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: ci.yml  opencode-review.yml  release.yml
frontend/: Dockerfile  astro.config.mjs  package.json  tailwind.config.mjs
frontend/src/components/: Console.tsx  Dashboard.tsx  ProgressBar.tsx  StageCard.tsx  StatsPanel.tsx
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
src/: config.rs  frontend.rs  lib.rs  main.rs
src/api/: mod.rs  models.rs  routes.rs
src/pipeline/: mod.rs
src/processing/: duplicate.rs  hash.rs  mod.rs  stages.rs
src/state/: db.rs  machine.rs  mod.rs
src/temporal/: activities.rs  client.rs  mod.rs  workflows.rs
tests/: api_integration.rs  pipeline_integration.rs
