[package]
name = "mediacleaner-pro"
version = "0.1.4-alpha"
edition = "2024"
authors = ["Carlos Pinto <capintobe@gmail.com>"]
description = "MediaCleaner Pro - Advanced perceptual duplicate removal with 10-stage pipeline"
license = "MIT"
repository = "https://github.com/capintobe/MediaCleaner"

[workspace]
resolver = "2"
members = [
    "packages/mc-core",
    "packages/mc-infra",
]

[dependencies]
# Async runtime
tokio = { version = "1.38", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp", "webp", "gif"] }
rayon = "1.10"

# Crypto
sha2 = "0.10"

# File system
walkdir = "2.5"

# Time & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.9", features = ["v4", "serde"] }

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono", "uuid"] }

# HTTP client (for Supabase integration)
reqwest = { version = "0.12", features = ["json"], optional = true }

# Workspace crates
mc-core = { path = "packages/mc-core", features = ["schema"] }
mc-infra = { path = "packages/mc-infra" }

# Embedded frontend
rust-embed = "8"
mime_guess = "2"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
async-stream = "0.3"

[features]
default = []
supabase = ["dep:reqwest"]
cloud = []

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
